--- a/src/App.css
+++ b/src/App.css
@@ -30,12 +30,14 @@ body{
 
 .bar {
   height: 100%;
-  background: rgb(255, 59, 59);
+  width: 100%; 
+  background-color: rgb(58, 58, 58);
+  /* background: linear-gradient(to right, red, orange, yellow, green); */
+  transition: width 0.3s ease;
+  text-align: center;
   color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: width 0.3s;
+  font-weight: bold;
+  line-height: 25px;
 }
 
 .btn {
@@ -43,15 +45,15 @@ body{
   padding: 10px 20px;
   font-size: 1.1rem;
   cursor: pointer;
-  background-color: red;
-  color: yellow;
-  border-radius: 50%;
-  border: yellow 4px solid;
+  background-color: rgb(0, 0, 0);
+  color: rgb(255, 0, 0);
+  border-radius: 25%;
+  border: rgb(255, 0, 0) 4px solid;
 }
 
 .special {
-  background: gold;
-  color: rgb(255, 0, 0);
+  background: rgb(255, 0, 0);
+  color: rgb(0, 0, 0);
   font-weight: bold;
   animation: pulse 1s infinite;
 }
